--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ hi.txt
 
 # User-specific stuff
 .idea/**/workspace.xml
+
+.idea/workspace.xml
+
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
