--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-hi.txt
+input.txt
 
 ### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
